docs: 优化项目名称和元数据以提升SEO可见性 (mcp-pdf-flow -> simple-pdf-extractor)
- 更新 README.md 和 README_EN.md，增强关键词覆盖 (RAG, LLM, Markdown, ETL)
- 优化 pyproject.toml，添加 mcp, rag, llm 等热门搜索关键词
- 明确服务启动说明，消除用户疑惑
- 包含之前新增的 PDF 模糊搜索功能代码

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,21 @@ build-backend = "hatchling.build"
 [project]
 name = "simple-pdf-extractor"
 version = "0.1.0"
-description = "全能 MCP 文档处理服务：智能 PDF 提取、结构化 Markdown 生成及 Word/PDF 格式互转"
+description = "Ultimate MCP Server for PDF: AI-Ready Extraction to Markdown, RAG Support, and Format Conversion (PDF/Word)"
+keywords = [
+    "mcp",
+    "mcp-server",
+    "pdf",
+    "pdf-extraction",
+    "markdown",
+    "llm",
+    "rag",
+    "document-processing",
+    "pdf-to-markdown",
+    "converter",
+    "ai",
+    "claude"
+]
 requires-python = ">=3.10"
 dependencies = [
     "mcp",
